Fixed overlapping of elements when resizing browser window

--- a/web/static/css/base.css
+++ b/web/static/css/base.css
@@ -13,7 +13,7 @@ body {
   margin: 0px ;
   display: grid;
   grid-template-rows: 200px 1fr;
-  grid-template-columns: 2fr 6fr 3fr; 
+  grid-template-columns: minmax(40px, 2fr) minmax(900px, 6fr) minmax(500px, 3fr); 
   grid-template-areas: 
       "header header header"
       "empty gallery miniatures";
